Allow for a per-tenant session timeout - CLM-35447 (#14028)